--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 								" <strong><span class='material-icons' style='vertical-align: middle;'>place</span> Latitude:</strong> " + latitude +
 								"<strong> Longitude:</strong> " + longitude + "<br>" +
 								"<strong><span class='material-icons' style='vertical-align: middle;'>location_city</span> Nearest street:</strong> " + streetName +
-								"<strong><span class='material-icons' style='vertical-align: middle;'>sound_detection_dog_barking</span><span class='material-icons' style='vertical-align: middle;'>person</span> Distance:</strong> " + distEachOther.toFixed(2) +" m" +
+								"<strong><span class='material-icons' style='vertical-align: middle;'>pets</span><span class='material-icons' style='vertical-align: middle;'>person</span> Distance:</strong> " + distEachOther.toFixed(2) +" m" +
 								" <strong><span class='material-icons' style='vertical-align: middle;'>explore</span> Direction:</strong> " + directionText + "<br>" +
 								"<strong><span class='material-icons' style='vertical-align: middle;'>speed</span> Speed:</strong> " + speed.toFixed(2) + "ms/s" +
 								"<strong><span class='material-icons' style='vertical-align: middle;'>directions_walk</span> Distance Walked: </strong> " + totalDistance.toFixed(2) +
