--- a/index.html
+++ b/index.html
@@ -273,27 +273,31 @@
 								directionText = "Not moving";
 							}
 							checkCheckpoints();
-							// Update the HTML element with different navigation variables
-							document.getElementById("currentLocation").innerHTML =
-								"<strong><span class='material-icons' style='vertical-align: middle;'>bluetooth</span> Bluetooth:</strong> " + blueToothStatus +
-								" <strong><span class='material-icons' style='vertical-align: middle;'>place</span> Latitude:</strong> " + latitude +
-								"<strong> Longitude:</strong> " + longitude + "<br>" +
-								"<strong><span class='material-icons' style='vertical-align: middle;'>location_city</span> Nearest street:</strong> " + streetName +
-								"<strong><span class='material-icons' style='vertical-align: middle;'>pets</span><span class='material-icons' style='vertical-align: middle;'>person</span> Distance from each other:</strong> " + distEachOther.toFixed(2) +" m" +
-								" <strong><span class='material-icons' style='vertical-align: middle;'>explore</span> Direction:</strong> " + directionText + "<br>" +
-								"<strong><span class='material-icons' style='vertical-align: middle;'>speed</span> Speed:</strong> " + speed.toFixed(2) + "ms/s" +
-								"<strong><span class='material-icons' style='vertical-align: middle;'>directions_walk</span> Distance Walked: </strong> " + totalDistance.toFixed(2) +
-								" m <strong>Avatar Actions:</strong> "+ partMoving + " " + directionMoving;
 						},
 						function (error) {
 							console.error("Error getting current location: ", error);
 						},
 						options
 					);
+				updateNavigationInfo();
 				} else {
 					console.error("Geolocation is not supported by this browser.");
 				}
 			}
+
+			function updateNavigationInfo() {
+				document.getElementById("currentLocation").innerHTML =
+					"<strong><span class='material-icons' style='vertical-align: middle;'>bluetooth</span> Bluetooth:</strong> " + blueToothStatus +
+					" <strong><span class='material-icons' style='vertical-align: middle;'>place</span> Latitude:</strong> " + latitude +
+					"<strong> Longitude:</strong> " + longitude + "<br>" +
+					"<strong><span class='material-icons' style='vertical-align: middle;'>location_city</span> Nearest street:</strong> " + streetName +
+					"<strong><span class='material-icons' style='vertical-align: middle;'>pets</span><span class='material-icons' style='vertical-align: middle;'>person</span> Distance from each other:</strong> " + distEachOther.toFixed(2) + " m" +
+					" <strong><span class='material-icons' style='vertical-align: middle;'>explore</span> Direction:</strong> " + directionText + "<br>" +
+					"<strong><span class='material-icons' style='vertical-align: middle;'>speed</span> Speed:</strong> " + speed.toFixed(2) + "ms/s" +
+					"<strong><span class='material-icons' style='vertical-align: middle;'>directions_walk</span> Distance Walked: </strong> " + totalDistance.toFixed(2) +
+					" m <strong>Avatar Actions:</strong> " + partMoving + " " + directionMoving;
+			}
+
 			// Function to calculate the distance between two coordinates using Haversine formula.
 			function calculateDistance(lat1, lon1, lat2, lon2) {
 				const earthRadius = 6371e3; // Earth radius in meters
