--- a/index.html
+++ b/index.html
@@ -210,7 +210,6 @@
 				}
 			}
 
-
 				// Call the function to redirect console.log and console.error to the div
 				redirectConsoleToDiv();
 		</script>
@@ -220,7 +219,6 @@
 			var longitude;
 			let speed;
 			var distEachOther = 0;
-			let directionText;
 
 			function getCurrentLocation() {
 				if (navigator.geolocation) {
@@ -251,7 +249,7 @@
 							previousPosition = position;
 							let heading = position.coords.heading || 0; // Heading in degrees
 							// Determine direction text based on heading
-
+							let directionText;
 							if (speed >= speedThreshold) {
 								if (heading >= 337.5 || heading < 22.5) {
 									directionText = "Heading North";
@@ -274,7 +272,17 @@
 								directionText = "Not moving";
 							}
 							checkCheckpoints();
-							updateNavigationInfo();
+							// Update the HTML element with different navigation variables
+							document.getElementById("currentLocation").innerHTML =
+								"<strong><span class='material-icons' style='vertical-align: middle;'>bluetooth</span> Bluetooth:</strong> " + blueToothStatus +
+								" <strong><span class='material-icons' style='vertical-align: middle;'>place</span> Latitude:</strong> " + latitude +
+								"<strong> Longitude:</strong> " + longitude + "<br>" +
+								"<strong><span class='material-icons' style='vertical-align: middle;'>location_city</span> Nearest street:</strong> " + streetName +
+								"<strong><span class='material-icons' style='vertical-align: middle;'>pets</span><span class='material-icons' style='vertical-align: middle;'>person</span> Distance from each other:</strong> " + distEachOther.toFixed(2) +" m" +
+								" <strong><span class='material-icons' style='vertical-align: middle;'>explore</span> Direction:</strong> " + directionText + "<br>" +
+								"<strong><span class='material-icons' style='vertical-align: middle;'>speed</span> Speed:</strong> " + speed.toFixed(2) + "ms/s" +
+								"<strong><span class='material-icons' style='vertical-align: middle;'>directions_walk</span> Distance Walked: </strong> " + totalDistance.toFixed(2) +
+								" m <strong>Avatar Actions:</strong> "+ partMoving + " " + directionMoving;
 						},
 						function (error) {
 							console.error("Error getting current location: ", error);
@@ -284,19 +292,6 @@
 				} else {
 					console.error("Geolocation is not supported by this browser.");
 				}
-
-			}
-			function updateNavigationInfo() {
-				document.getElementById("currentLocation").innerHTML =
-					"<strong><span class='material-icons' style='vertical-align: middle;'>bluetooth</span> Bluetooth:</strong> " + blueToothStatus +
-					" <strong><span class='material-icons' style='vertical-align: middle;'>place</span> Latitude:</strong> " + latitude +
-					"<strong> Longitude:</strong> " + longitude + "<br>" +
-					"<strong><span class='material-icons' style='vertical-align: middle;'>location_city</span> Nearest street:</strong> " + streetName +
-					"<strong><span class='material-icons' style='vertical-align: middle;'>pets</span><span class='material-icons' style='vertical-align: middle;'>person</span> Distance from each other:</strong> " + distEachOther.toFixed(2) + " m" +
-					" <strong><span class='material-icons' style='vertical-align: middle;'>explore</span> Direction:</strong> " + directionText + "<br>" +
-					"<strong><span class='material-icons' style='vertical-align: middle;'>speed</span> Speed:</strong> " + speed.toFixed(2) + "ms/s" +
-					"<strong><span class='material-icons' style='vertical-align: middle;'>directions_walk</span> Distance Walked: </strong> " + totalDistance.toFixed(2) +
-					" m <strong>Avatar Actions:</strong> " + partMoving + " " + directionMoving;
 			}
 
 			// Function to calculate the distance between two coordinates using Haversine formula.
