--- a/index.html
+++ b/index.html
@@ -1046,6 +1046,8 @@
 			let prevLatitude = null;
 			let prevLongitude = null;
 			let prevCurrentCheckpoint = null;
+			let prevMovement = null;
+			let prevTagInteraction = null;
 
 			// Function to write data to the database
 			function writeToDatabase() {
@@ -1057,6 +1059,8 @@
 			            prevLatitude = latitude;
 			            prevLongitude = longitude;
 			            prevCurrentCheckpoint = currentCheckpoint;
+						prevMovement = patternMovement;
+						prevTagInteraction = tagID;
 
 			            // Determine the database name based on the deviceName
 			            const databaseName = (deviceName === 'hachi_BT') ? 'hachi_data' : 'avatar_data';
@@ -1065,12 +1069,17 @@
 			            const latitudeVar = (deviceName === 'hachi_BT') ? 'hachi_latitude' : 'avatar_latitude' ;
 			            const longitudeVar = (deviceName === 'hachi_BT') ? 'hachi_longitude' : 'avatar_longitude';
 			            const checkpointVar = (deviceName === 'hachi_BT') ? 'hachi_checkpoint' :'avatar_checkpoint' ;
+						const movementVar = (deviceName === 'hachi_BT') ? 'hachi_movement' :'avatar_movement' ;
+						const tagInteractionVar = (deviceName === 'hachi_BT') ? 'hachi_tag' :'avatar_tag' ;
 
 			            // Write variables to the database
 			            set(ref(database, databaseName), {
 			                [latitudeVar]: latitude,
 			                [longitudeVar]: longitude,
-			                [checkpointVar]: currentCheckpoint
+			                [checkpointVar]: currentCheckpoint,
+							[movementVar]: patternMovement,
+							[tagInteractionVar]: tagID,
+
 			            }).then(() => {
 			                //console.log("Variables written to the database successfully!");
 			            }).catch((error) => {
