--- a/index.html
+++ b/index.html
@@ -1078,8 +1078,7 @@
 			                [longitudeVar]: longitude,
 			                [checkpointVar]: currentCheckpoint,
 							[movementVar]: patternMovement,
-							[tagInteractionVar]: tagID,
-
+							[tagInteractionVar]: tagID
 			            }).then(() => {
 			                //console.log("Variables written to the database successfully!");
 			            }).catch((error) => {
