--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 			const cooldownDuration = 500; // 1 second
 			let detectMovement = true;
 			let startDetectMovement = false;
-			let tagID;
+			let tagID = 0;
 
 			function setup() {
 				var avatarBTCanvas = createCanvas(windowWidth, windowHeight * 0.35);
