--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 								" <strong><span class='material-icons' style='vertical-align: middle;'>explore</span> Direction:</strong> " + directionText +
 								" <strong><span class='material-icons' style='vertical-align: middle;'>speed</span> Speed:</strong> " + speed.toFixed(2) + "ms/s" + "<br>" +
 								" <strong><span class='material-icons' style='vertical-align: middle;'>directions_walk</span> Distance Walked: </strong> " + totalDistance.toFixed(2) +
-								" m <strong><span class='material-symbols-outlined' style='vertical-align: middle;'>robot_2</span> Avatar Actions:</strong> "+ partMoving + " " + directionMoving;
+								" m <strong><span class='material-symbols-outlined' style='vertical-align: middle;'>robot</span> Avatar Actions:</strong> "+ partMoving + " " + directionMoving;
 						},
 						function (error) {
 							console.error("Error getting current location: ", error);
