--- a/index.html
+++ b/index.html
@@ -1080,6 +1080,8 @@
 						const headingVar = (deviceName === 'hachi_BT') ? 'hachi_heading' : 'avatar_heading';
 			            const checkpointVar = (deviceName === 'hachi_BT') ? 'hachi_checkpoint' :'avatar_checkpoint' ;
 						const movementVar = (deviceName === 'hachi_BT') ? 'hachi_movement' :'avatar_movement' ;
+						const partMovementVar = (deviceName === 'hachi_BT') ? 'hachi_part' :'avatar_part' ;
+						const dirMovementVar = (deviceName === 'hachi_BT') ? 'hachi_direction' :'avatar_direction' ;
 						const tagInteractionVar = (deviceName === 'hachi_BT') ? 'hachi_tag' :'avatar_tag' ;
 
 			            // Write variables to the database
@@ -1089,6 +1091,8 @@
 							[headingVar]: directionText,
 			                [checkpointVar]: currentCheckpoint,
 							[movementVar]: patternMovement,
+							[partMovementVar]: partMoving,
+							[dirMovementVar]: directionMoving,
 							[tagInteractionVar]: tagID
 			            }).then(() => {
 			                //console.log("Variables written to the database successfully!");
