--- a/index.html
+++ b/index.html
@@ -1081,7 +1081,7 @@
 			            const longitudeVar = (deviceName === 'hachi_BT') ? 'hachi_longitude' : 'avatar_longitude';
 						const headingVar = (deviceName === 'hachi_BT') ? 'hachi_heading' : 'avatar_heading';
 			            const checkpointVar = (deviceName === 'hachi_BT') ? 'hachi_checkpoint' :'avatar_checkpoint' ;
-						const checkDistVar = (deviceName === 'hachi_BT') ? 'hachi_dist_checkpoint' : 'avatar_dist_checkpoint';
+						const checkDistVar = (deviceName === 'hachi_BT') ? 'hachi_checkpoint_dist' : 'avatar_checkpoint_dist';
 						const movementVar = (deviceName === 'hachi_BT') ? 'hachi_movement' :'avatar_movement' ;
 						const partMovementVar = (deviceName === 'hachi_BT') ? 'hachi_part_mov' :'avatar_part_mov' ;
 						const dirMovementVar = (deviceName === 'hachi_BT') ? 'hachi_part_dir' :'avatar_part_dir' ;
