--- a/index.html
+++ b/index.html
@@ -1143,7 +1143,7 @@
 				if (myData) {
 					const passage = myData[myPassage];
 					if (passage !== previousPassage) { // Compare with previous passage
-						composeMessage(String(passage));
+						displayText(String(passage));
 						previousPassage = passage; // Update previous passage
 					}
 				} else {
