--- a/index.html
+++ b/index.html
@@ -444,6 +444,15 @@
 				}
 			}
 
+			// Function to check if two arrays are equal
+			function arraysEqual(arr1, arr2) {
+				if (arr1.length !== arr2.length) return false;
+				for (let i = 0; i < arr1.length; i++) {
+					if (arr1[i] !== arr2[i]) return false;
+				}
+				return true;
+			}
+
 			let cachedMovementConditions = null;
 			let previousPart = "none";
 			let previousDirection = "none";
