--- a/index.html
+++ b/index.html
@@ -384,14 +384,16 @@
 				}
 			}
 
-			let previousMovements;
+			let previousMovements={};
+			let movements = {};
+
 			// Define variables for detecting movement in different body parts
 			function handleMovement() {
 				// Define thresholds for movement detection
 				let movementThreshold = 13;
 
 				// Variables to track movement of different body parts
-				let movements = {};
+
 
 				// Mapping between labels and movements for hachi_BT
 				if (deviceName === "hachi_BT") {
