--- a/index.html
+++ b/index.html
@@ -445,6 +445,8 @@
 			        let label = labels[i];
 			        let movement = labelMovements[label];
 
+					console.log(`Label: ${label}, Movement: ${movement}`);
+
 					// Ignore if movement is null
 					if (movement === null || movement === undefined) {
 						continue;
