--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
 
 					function processMovementConditions(movements) {
 						if (!movements) {
-							console.error("Movement data is null.");
+							//console.error("Movement data is null.");
 							return;
 						}
 						// Iterate over movement conditions.
