--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
 				    if (Object.keys(movements).length > 0) { // Check if movements object is not empty
 				        if (!objectsEqual(movements, previousMovements)) {
 				            previousMovements = { ...movements }; // Make a copy of movements
-				            console.log(movements);
+				            //console.log(movements);
 				            return movements;
 				        }
 				    }
