--- a/index.html
+++ b/index.html
@@ -462,20 +462,11 @@
 				    // Update previous potentiometer values for the next iteration.
 				    previousPotValues = potValues.slice(0, numPotentiometers);
 
-					function areAllKeysNull(obj) {
-						for (let key in obj) {
-							if (obj[key] !== null) {
-								return false; // If any value is not null, return false
-							}
-						}
-						return true; // If all values are null, return true
-					}
-
 				    // Return the detected movement
 				    if (Object.keys(movements).length > 0) { // Check if movements object is not empty
-				        if (!objectsEqual(movements, previousMovements) || !areAllKeysNull(movements)) {
+				        if (!objectsEqual(movements, previousMovements)) {
 				            previousMovements = { ...movements }; // Make a copy of movements
-				            console.log(movements);
+				            //console.log(movements);
 				            return movements;
 				        }
 				    }
