--- a/index.html
+++ b/index.html
@@ -659,7 +659,7 @@
 				}
 
 				// Call updateStreetName then every 10 seconds
-				setInterval(updateStreetName, 30000); // Call it every 10 seconds (10000 milliseconds)
+				//setInterval(updateStreetName, 30000); // Call it every 10 seconds (10000 milliseconds)
 
 				var timeoutID; // Variable to hold the timeout ID.
 				var previousMessage = ""; // Variable to store the previous message
