--- a/index.html
+++ b/index.html
@@ -1184,7 +1184,7 @@
 				if (myData) {
 					const passage = myData[myPassage];
 					if (passage !== previousPassage) { // Compare with previous passage
-						console.log(passage);
+						console.log(String(passage));
 						displayText(String(passage));
 						previousPassage = passage; // Update previous passage
 					}
